# cmircrew_indexer

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  PROWLARR_INTEGRATION.md  README.md  debug_xml_simple.py  diagnostic_output.txt  docker-compose.prowlarr.yml  login.py  magnet_unlock_script.py  mircrew_api.py  mircrew_indexer.py  mircrew_scraper.py  pyproject.toml  requirements-dev.txt  requirements.txt  search_diagnostic_fixed.py  setup.py  test_xml_debug.py  thread_analyzer.py
.github/workflows/: ci.yml
config/: logging.yml
docker/: Dockerfile.api  docker-compose.dev.yml
docs/: PROWLARR_INTEGRATION.md  QA_PLAN.md  README.md
scripts/: debug_xml_simple.py  health_check.py  test_connection.py
src/mircrew/: __init__.py
src/mircrew/api/: __init__.py  server.py  torznab.py
src/mircrew/config/: __init__.py  categories.py  settings.py
src/mircrew/core/: __init__.py  auth.py  indexer.py  magnet_unlock.py  scraper.py
src/mircrew/utils/: __init__.py  html_parser.py  logging_utils.py  session.py  size_utils.py  xml_helpers.py
tests/: __init__.py
tests/fixtures/: sample_search_results.html  sample_thread.html
tests/integration/: test_full_search.py  test_prowlarr_integration.py
tests/unit/: test_api.py  test_auth.py  test_indexer.py  test_magnet_unlock.py  test_scraper.py  test_utils.py
utilities/: search_diagnostic.py  test_connection.py  thread_analyzer.py
